公共、output路径，环境分离

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,6 +1,14 @@
+$color: yellow;
+$blue: blue;
 .header {
   background-color: lightblue;
   h1 {
-    color: yellow;
+    color: $color;
+  }
+  .bg-image {
+    width: 100px;
+    height: 100px;
+    background: no-repeat center center / cover;
+    background-image: url('./logo.svg');
   }
 }
