解释器处理、css模块化初步处理、README处理清单、全局样式初步处理

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,4 +1,4 @@
-@import '../var';
+@import '../styles/var';
 $color: yellow;
 $blue: blue;
 
@@ -8,7 +8,7 @@ $blue: blue;
   h1 {
     color: $color;
   }
-  .bg-image {
+  .bgImage {
     width: 100px;
     height: 100px;
     background: no-repeat center center / cover;
