--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -1,5 +1,5 @@
-@import '@/styles/var';
-@import '@/styles/tool';
+@import '@/styles/var.scss';
+@import '@/styles/tool.scss';
 
 $color: yellow;
 $blue: blue;
