--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -19,6 +19,9 @@ $blue: blue;
 }
 .floatBox {
   @include clearfix;
+  :global(.test) {
+    background-color: saddlebrown;
+  }
   p {
     float: left;
   }
