--- a/src/about-me/style.scss
+++ b/src/about-me/style.scss
@@ -1,2 +1,14 @@
+@import '@/styles/var.scss';
+
 .about-me {
+  h2 {
+    padding-left: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid $themeColor;
+  }
+  p,
+  h3 {
+    margin-bottom: 10px;
+  }
 }
