feat(style tool): add multipleEllipsis style tool

--- a/src/styles/tool.scss
+++ b/src/styles/tool.scss
@@ -16,3 +16,11 @@
   overflow: hidden;
   white-space: nowrap;
 }
+
+@mixin multipleEllipsis($line) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: $line;
+  -webkit-box-orient: vertical;
+}
