--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -2,5 +2,7 @@ $rootBgColor: #ebf0f0;
 $themeColor: lightblue;
 $contentWidth: 800px;
 
+$footerHeight: 30px;
+
 $primaryFontColor: #333;
 $secondFontColor: #999;
