--- a/src/pages/article/list/list-filter/article-filter.scss
+++ b/src/pages/article/list/list-filter/article-filter.scss
@@ -1,6 +1,6 @@
 @import '@/styles/var.scss';
 
-.articles-list-filter {
+.article-list-filter {
   margin-bottom: 20px;
   button {
     border: 1px solid $themeColor;
