--- a/src/browser/styles/gobal.scss
+++ b/src/browser/styles/gobal.scss
@@ -1,6 +1,6 @@
 // 浏览器样式兼容处理
-@import '../../node_modules/normalize.css';
-@import '@/styles/var.scss';
+@import '../../../node_modules/normalize.css';
+@import '@/browser/styles/var.scss';
 // 全局样式定义
 
 html,
