--- a/src/browser/pages/_demo/style-demo/index.scss
+++ b/src/browser/pages/_demo/style-demo/index.scss
@@ -1,5 +1,5 @@
-@import '@/browser/styles/var.scss';
-@import '@/browser/styles/tool.scss';
+@import '@/styles/var.scss';
+@import '@/styles/tool.scss';
 
 $color: salmon;
 
