--- a/src/browser/pages/article/list/list-item/article-item.scss
+++ b/src/browser/pages/article/list/list-item/article-item.scss
@@ -1,5 +1,5 @@
-@import '@/browser/styles/var.scss';
-@import '@/browser/styles/tool.scss';
+@import '@/styles/var.scss';
+@import '@/styles/tool.scss';
 
 .article-list-item {
   padding: 15px 15px 0;
