feat(layout & app & root): change typescript

--- a/src/browser-ts/pages/app/app.css
+++ b/src/browser-ts/pages/app/app.css
@@ -1,7 +1,6 @@
 .app {
-  background-color: var(--mainColor);
-  & h1 {
-    color: blue;
-    @mixin multipleEllipsis 2;
-  }
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
 }
