--- a/src/views/index.tmpl.html
+++ b/src/views/index.tmpl.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <%- root %>
+    </div>
     <script type="text/javascript" src="/assets/vendor.dll.js"></script>
 </body>
 
