--- a/src/browser/pages/about-me/about-me.css
+++ b/src/browser/pages/about-me/about-me.css
@@ -5,8 +5,11 @@
     margin-bottom: 10px;
     border-bottom: 1px solid var(--themeColor);
   }
-  & p,
-  h3 {
+  & p {
+    margin-bottom: 10px;
+  }
+  ,
+  & h3 {
     margin-bottom: 10px;
   }
 }
