--- a/src/views/index.tmpl.html
+++ b/src/views/index.tmpl.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Garry Blog</title>
-</head>
+  </head>
 
-<body>
-    <div id="root">
-        <%- root %>
-    </div>
+  <body>
+    <div id="root"><%- root %></div>
+    <script>
+      window.REDUX_STATE = <%- JSON.stringify(state) %>
+    </script>
     <script type="text/javascript" src="/assets/vendor.dll.js"></script>
-</body>
-
+  </body>
 </html>
