chore(fe): modifiy build result file structrue

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,10 +13,10 @@
     </div>
     <script>
 
-        window.REDUX_STATE = <%- state %>
+        window.REDUX_STATE =<%- state %>;
 
     </script>
-    <script type="text/javascript" src="/assets/vendor.dll.js"></script>
-<script type="text/javascript" src="/main.js"></script></body>
+    <script type="text/javascript" src="/vendor/vendor.dll.js"></script>
+<script type="text/javascript" src="/js/main.js"></script></body>
 
 </html>
