--- a/src/views/index.tmpl.html
+++ b/src/views/index.tmpl.html
@@ -13,10 +13,10 @@
     </div>
     <script>
 
-        window.REDUX_STATE = <%- state %>
+        window.REDUX_STATE =<%- state %>;
 
     </script>
-    <script type="text/javascript" src="/assets/vendor.dll.js"></script>
+    <script type="text/javascript" src="/vendor/vendor.dll.js"></script>
 </body>
 
 </html>
