chore: handle favicon and gzip

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Garry Blog</title>
     <style> <%- styles %></style>
-</head>
+<link rel="shortcut icon" href="/favicon.ico"></head>
 
 <body>
     <div id="root">
